--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "mongobd": "^0.0.1-security.0",
     "mongodb": "^4.11.0",
     "passport": "^0.6.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "request-ip": "^3.3.0"
   },
   "repository": {
     "type": "git",
